# hivemind

./: Cargo.toml  Dockerfile  README.md  deny.toml
bee/: Cargo.toml  README.md  docker-compose.yml
bee/src/: main.rs
hivectl/: Cargo.toml  README.md
pheromone/: Cargo.toml  build.rs
pheromone/proto/: bee.proto  common.proto  hive.proto  queen.proto
pheromone/src/: lib.rs
queen/: Cargo.toml  docker-compose.yml
queen/src/: config.rs  main.rs
queen/src/scheduler/: aws.rs  mod.rs
spec/: job-description.md  storage.md  terminology.md
