[package]
name = "hive-queen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aws-config = { version = "0.56", optional = true }
aws-sdk-ec2 = { version = "0.30", optional = true }
pheromone = { path = "../pheromone", features = ["queen-server", "hive-server", "bee-client"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["aws"]
aws = ["aws-config", "aws-sdk-ec2"]
